--- a/helpdesk/templates/helpdesk/ticket.html
+++ b/helpdesk/templates/helpdesk/ticket.html
@@ -50,8 +50,8 @@
 {% for followup in ticket.followup_set.all %}
 <div class='followup'>
 <div class='title'>
-    {{ followup.title }} <span class='byline'>{% if followup.user %}by {{ followup.user }}{% endif %} <span title='{{ followup.date|date:"r" }}'>{{ followup.date|timesince }} ago</span>{% if not followup.public %} <span class='private'>({% trans "Private" %})</span>{% endif %}</span>
-    <a href="{% url helpdesk_followup_edit ticket.id followup.id %}" class='followup-edit'><img width="60" height="15" title="Edit" alt="Edit" src="{{ STATIC_URL }}helpdesk/buttons/edit.png"></a>
+    {{ followup.title }} <span class='byline'>{% if followup.user %}{% trans "by" %} {{ followup.user }}{% endif %} <span title='{{ followup.date|date:"r" }}'>{{ followup.date|timesince }} {% trans "ago" %}</span>{% if not followup.public %} <span class='private'>({% trans "Private" %})</span>{% endif %}</span>
+    <a href="{% url helpdesk_followup_edit ticket.id followup.id %}" class='followup-edit'><img width="60" height="15" title="{% trans "Edit" %}" alt="{% trans "Edit" %}" src="{{ STATIC_URL }}helpdesk/buttons/edit.png"></a>
 </div>
 <span class='followup-desc'>{% if followup.comment %}{{ followup.comment|force_escape|urlizetrunc:50|num_to_link|linebreaksbr }}{% endif %}</span>
 {% for change in followup.ticketchange_set.all %}
